logs/Slang/generated/hdlconv/hdlconvertor_p57.sv.log
name: hdlconvertor_p57
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p57.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p57.sv:8:42: error: dimension requires a constant range
function automatic T Tsum (input T driver[]);
                                         ^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p57.sv:10:3: error: language feature not yet supported
  foreach (driver[i])
  ^~~~~~~~~~~~~~~~~~~
